--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,12 +1,3 @@
-.navbar-text {
-  font-weight: 800;
-}
-
-div.book {
-  float: left;
-  width: 200px;
-  height: 300px;
-  padding: 20px;
-  margin: 10px;
-  border: 1px solid gray;
+body {
+  background-color: #6435c9;
 }
